<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_drawable"
    android:padding="20dp"
    android:orientation="vertical"
    style="@style/LoginDialogTheme">
    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo_astlix" />

    <EditText
        android:id="@+id/admUser"
        style="@style/LoginDialogTheme"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="16sp" />

    <EditText
        android:id="@+id/admPass"
        style="@style/LoginDialogTheme"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/white"
        android:textSize="16sp" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/butons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:background="@drawable/button_login"
            android:text="@string/butCancelar"
            android:textColor="@color/grisAstlix"
            android:elevation="10dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:background="@drawable/button_login"
            android:text="@string/butEntrar"
            android:textColor="@color/grisAstlix"
            android:elevation="10dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>