<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_drawable"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp">
    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo_astlix" />
    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/logoImg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/url"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/web"
                android:ems="10"
                android:gravity="center"
                android:inputType="textUri"
                android:textSize="16sp"
                android:textColor="@color/white"
                style="@style/LoginDialogTheme"
                android:hint="@string/url_server_hint"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/port"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_port"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="number"
                android:textSize="16sp"
                android:textColor="@color/white"
                style="@style/LoginDialogTheme"
                android:hint="@string/port_server_hint"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/domain"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_domain"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:textSize="16sp"
                android:textColor="@color/white"
                style="@style/LoginDialogTheme"
                android:hint="@string/domain_server_hint"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/user"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_action_user"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:hint="@string/user_server_hint"
                style="@style/LoginDialogTheme"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_action_pass"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:hint="@string/pass_server_hint"
                style="@style/LoginDialogTheme"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/soapact"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_codee"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:hint="@string/soap_server_hint"
                style="@style/LoginDialogTheme"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/servicio"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_codee"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:hint="@string/servicio_server_hint"
                style="@style/LoginDialogTheme"
                tools:ignore="LabelFor" />
        </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/butons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/scrollable">
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_cancel"
            android:background="@drawable/button_login"
            android:text="@string/butCancelar"
            android:textColor="@color/grisAstlix"
            android:elevation="10dp"
            tools:ignore="RtlSymmetry" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_save"
            android:background="@drawable/button_login"
            android:text="@string/butCrear"
            android:textColor="@color/grisAstlix"
            android:elevation="10dp"
            tools:ignore="RtlSymmetry" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>