<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_drawable"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp">
    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo_astlix" />
    <ScrollView
        android:id="@+id/scrolv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/logoImg"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/url1"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/web"
                android:drawableEnd="@drawable/number_one"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="textUri"
                android:textSize="16sp"
                android:textColor="@color/white"
                style="@style/LoginDialogTheme"
                android:hint="@string/url_server_hint"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/url2"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/web"
                android:drawableEnd="@drawable/number_two"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="textUri"
                android:textSize="16sp"
                android:textColor="@color/white"
                style="@style/LoginDialogTheme"
                android:hint="@string/url_server_hint"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/tagAge"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_time"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:textSize="16sp"
                android:textColor="@color/white"
                style="@style/LoginDialogTheme"
                android:hint="@string/tag_age_hing"
                tools:ignore="LabelFor" />
            <EditText
                android:id="@+id/updateInt"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_timer"
                android:ems="10"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:hint="@string/update_xspan_hint"
                style="@style/LoginDialogTheme"
                tools:ignore="LabelFor" />
            <LinearLayout
                android:id="@+id/reports"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/entryRep"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:drawableStart="@drawable/enter"
                    android:ems="10"
                    android:gravity="center"
                    android:buttonTint="@color/verdeAstlix"
                    tools:ignore="TouchTargetSizeCheck" />
                <CheckBox
                    android:id="@+id/updateRep"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:drawableStart="@drawable/refresh"
                    android:buttonTint="@color/verdeAstlix"
                    android:ems="10"
                    android:gravity="center"
                    tools:ignore="TouchTargetSizeCheck" />
                <CheckBox
                    android:id="@+id/exitRep"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:drawableStart="@drawable/logout"
                    android:buttonTint="@color/verdeAstlix"
                    android:ems="10"
                    android:gravity="center"
                    tools:ignore="TouchTargetSizeCheck" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/maxPow"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/dial_max"
                    android:buttonTint="@color/verdeAstlix"
                    android:ems="10"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:checked="true" />
                <EditText
                    android:id="@+id/powVal"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:layout_weight="2"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/ic_bolt"
                    android:ems="10"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:hint="@string/power_xspan_hint"
                    style="@style/LoginDialogTheme"
                    tools:ignore="LabelFor" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <Spinner
                android:id="@+id/dirMode"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_spinner"
                android:contentDescription="@string/dir_mode_hint"
                android:dropDownVerticalOffset="48dp" />
            <Spinner
                android:id="@+id/dirFov"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:dropDownVerticalOffset="48dp"
                android:background="@drawable/bg_spinner"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/dir_fov_hint"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/butons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/scrolv">
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_cancel"
            android:background="@drawable/button_login"
            android:text="@string/butCancelar"
            android:textColor="@color/grisAstlix"
            android:elevation="10dp"
            tools:ignore="RtlSymmetry" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_save"
            android:background="@drawable/button_login"
            android:text="@string/butCrear"
            android:textColor="@color/grisAstlix"
            android:elevation="10dp"
            tools:ignore="RtlSymmetry" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>